--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind base;
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -23,6 +23,12 @@ body {
   place-content: center;
 }
 
+textarea {
+  font-family: inherit;
+  margin-bottom: 8px;
+  padding-left: 5px;
+}
+
 ul, h4 {
   margin: 0;
   padding: 0;
@@ -41,4 +47,16 @@ ul li {
   margin-bottom: 16px;
   max-width: 320px;
   padding: 8px 32px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form input {
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  padding: 4px 6px;
+  margin: 0 0 4px;
 }
